# sw-cor24-rust

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md  demo-pipeline.sh  demo.sh  index.html
.agentrail/: instruction-lock.toml  plan.md  saga.toml
components/: Cargo.toml
demos/: generate-all.sh
docs/: agent-instructions.txt  as24-notes.md  c-tab-plan.md  cli-tools.md  cor24-feedback.txt  cor24-fib-email.txt  cor24-meet-notes-20260317.txt  cor24-nop-email.txt  cor24-tutorial.md  extended-assembler.md  feature-timer-register.md  feature-watchdog.md  feedback-checklist.md  implementation-plan.md  issues.md  pipeline.md  translator-optimization.md
output/: demo_button_echo.msp430.s
pages/: asm-game-20fa9f054bd256ee.css  asm-game-32076c64850f5133.css  asm-game-b9bc48124f503780.css  cor24-emulator-12d5afbb403edd9b_bg.wasm  cor24-emulator-26d0de6dbe27ce08_bg.wasm  cor24-emulator-3427ad3d3fc8aa72.js  cor24-emulator-3427ad3d3fc8aa72_bg.wasm  cor24-emulator-47db29ca0de538bd.js  cor24-emulator-47db29ca0de538bd_bg.wasm  cor24-emulator-4ba6bcc87a43990_bg.wasm  cor24-emulator-50638dd41142d511_bg.wasm  cor24-emulator-5875f89acee8f008_bg.wasm  cor24-emulator-5e7b6d3ac9b5b23c_bg.wasm  cor24-emulator-6d34ac6d929a84d4_bg.wasm  cor24-emulator-78d509a780cddd48_bg.wasm  cor24-emulator-7ae1ccad72fdef9b_bg.wasm  cor24-emulator-80f13b87c3e661d5_bg.wasm  cor24-emulator-87109fd73c94d160.js  cor24-emulator-87109fd73c94d160_bg.wasm  cor24-emulator-88d3cafd530a538a.js  cor24-emulator-88d3cafd530a538a_bg.wasm  cor24-emulator-8f256406e3d1222b.js  cor24-emulator-b027468c812443a1.js  (+15 more)
(+135 files in other folders)
