[package]
name = "sw-cor24-rust"
version = "0.1.0"
edition = "2021"
description = "Rust-to-COR24 translation pipeline (wasm2cor24, msp430-to-cor24)"
license = "MIT"
repository = "https://github.com/sw-embed/sw-cor24-rust"

[workspace]
exclude = ["examples/blink", "demos/demo_echo"]

[dependencies]
wasmparser = "0.121"
anyhow = "1.0"
cor24-assembler = { path = "../sw-cor24-assembler" }
cor24-emulator = { path = "../sw-cor24-emulator" }
libc = "0.2"

[[bin]]
name = "wasm2cor24"
path = "src/main.rs"

[[bin]]
name = "msp430-to-cor24"
path = "src/msp430_cli.rs"

[[bin]]
name = "cor24-run"
path = "src/run.rs"

[dev-dependencies]
